[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DrugTax"
version = "1.0.8"
authors = [
  { name="A.J.Preto", email="martinsgomes.jose@gmail.com" },
  { name="I.S.Moreira", email="irina.moreira@cnc.uc.pt" }
]
description = "A package to characterize small ligands"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MoreiraLAB/DrugTax"
"Lab Page" = "http://www.moreiralab.com/"

[tool.poetry]
packages = [
    { include = "pandas" },
    { include = "upsetplot" },
    { include = "pandas" },
    { include = "re" },
    { include = "pubchempy" }
]